# kompusim

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  TODO.md
docs/: terminology.md
kompusim-gui/: Cargo.toml  Trunk.toml  index.html
kompusim-gui/assets/: manifest.json  sw.js
kompusim-gui/src/: app.rs  base_uregs.rs  cmdline.rs  console.rs  instr_decoder.rs  instr_list.rs  lib.rs  load_demo.rs  main.rs  sim.rs  status_control.rs
kompusim-lib/: Cargo.toml
kompusim-lib/src/: alu.rs  bits.rs  bus.rs  csr.rs  device.rs  lib.rs  main.rs  ram.rs  rv64fd.rs  rv64i_16b_dec.rs  rv64i_16b_disasm.rs  rv64i_cpu.rs  rv64i_dec.rs  rv64i_disasm.rs  rvc_dec.rs  rvc_disasm.rs  tui.rs  uart.rs
kompusim-lib/tests/: test_16b_instr.rs  test_32b_instr.rs  test_instr.rs  test_instructions.rs  test_rvc_instr.rs
src/: alu.rs  bits.rs  bus.rs  csr.rs  device.rs  lib.rs  main.rs  pmem.rs  ram.rs  rv64i_cpu.rs  rv64i_dec.rs  rv64i_disasm.rs  tui.rs  uart.rs
tests/: test_instructions.rs
tests/test_programs/all_instructions/: all_instructions.ld  all_instructions.s  build.sh  run_gui.sh
tests/test_programs/linux_kernel/: disasm.sh  run_gui.sh
tests/test_programs/uart_hello_world/: build.sh  run.sh  run_gui.sh
tests/uart_hello_world/: build.sh  run.sh  uart_hello_world.s
