[package]
name = "kompusim"
version = "0.1.0"
edition = "2021"
authors = ["Dmitry Voytik <voytikd@gmail.com"]
description = "KompuSim - RISC V ISA simulator"
readme = "README.md"
homepage = "https://github.com/dvoytik/kompusim"
repository = "https://github.com/dvoytik/kompusim"
license = "Apache-2.0"
keywords = ["riscv"]
exclude = ["tests/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
