[package]
name = "kompusim-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.0", features = ["derive"] }
nom = "7.1.3"
kompusim = { path = "../kompusim-lib" }
iced = { git = "https://github.com/iced-rs/iced.git", rev = "2b19471d1cfe4cf034b026aa6620b1685a5ab772", features = ["debug", "lazy"]}
# regex-lite   = { git = "https://github.com/rust-lang/regex.git" }

# app persistence:
serde = { version = "1", features = ["derive"] }
